Update de l'affichage des works et de l'admin

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -6,7 +6,8 @@
     font-family: Roboto;
     src: url('./fonts/Roboto-Regular.ttf');
 }
-
 body {
-    font-family: 'Roboto' !important;
+    min-height: 100vh;
+    font-family: "Roboto", serif;
+    background: linear-gradient(125deg, #222, #202020);
 }
